// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render summary with 1 expense 1`] = `
<div>
  <h3>
    You are viewing - 
    1
     
    expense
    
    
    
    - Total Amount: 
    $500.00
  </h3>
</div>
`;

exports[`should render summary with multiple expenses 1`] = `
<div>
  <h3>
    You are viewing - 
    3
     
    expenses
    
    
    
    - Total Amount: 
    $2,300,030.00
  </h3>
</div>
`;

exports[`should render summary without any expense 1`] = `
<div>
  <h3>
    You are viewing - 
    0
     
    expense
    
    
    
    - Total Amount: 
    $0.00
  </h3>
</div>
`;
